--- a/static/results-style.css
+++ b/static/results-style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .content-wrap {
-  width: fit-content;
+  width: 90%;
   margin: 0 auto;
 
   display: flex;
